RESOLVED FIXED 145252
[WK2] Fix unused-private-field warning in WebProcess/Plugins/PluginView.<h|cpp>
https://bugs.webkit.org/show_bug.cgi?id=145252
Summary [WK2] Fix unused-private-field warning in WebProcess/Plugins/PluginView.<h|cpp>
Csaba Osztrogonác
Reported 2015-05-21 03:05:57 PDT
In file included from ../../Source/WebKit2/WebProcess/Plugins/PluginView.cpp:27: ../../Source/WebKit2/WebProcess/Plugins/PluginView.h:254:10: warning: private field 'm_didPlugInStartOffScreen' is not used [-Wunused-private-field] bool m_didPlugInStartOffScreen; ^ ../../Source/WebKit2/WebProcess/Plugins/PluginView.h:290:14: warning: private field 'm_countSnapshotRetries' is not used [-Wunused-private-field] unsigned m_countSnapshotRetries; ^ 2 warnings generated. ------ - m_didPlugInStartOffScreen is only used inside ENABLE(PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC) guard - m_countSnapshotRetries in only used once inside ENABLE(PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC) and once inside PLATFORM(COCOA) guard
Attachments
Patch (3.45 KB, patch)
2015-05-21 03:12 PDT, Csaba Osztrogonác
no flags
Patch (5.79 KB, patch)
2015-05-21 04:11 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2015-05-21 03:12:14 PDT
Csaba Osztrogonác
Comment 2 2015-05-21 03:57:05 PDT
OMG, ENABLE_PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC is defined in Source/WebKit2/WebProcess/WebPage/WebPage.h. But why there? :-/ ( This define was added in http://trac.webkit.org/changeset/145332 )
Csaba Osztrogonác
Comment 3 2015-05-21 04:11:32 PDT
Csaba Osztrogonác
Comment 4 2015-05-21 04:16:13 PDT
(In reply to comment #3) > Created attachment 253518 [details] > Patch I moved the definition of ENABLE_PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC from Source/WebKit2/WebProcess/WebPage/WebPage.h to FeatureDefines.h. It is incorrect to define an ENABLE_* guard in any local header, the value of all ENABLE guard must be same everywhere in the codebase. Now it is true if you include WebPage.h and PLATFORM(COCOA) is true, but it is false if you don't include WebPage.h.
Csaba Osztrogonác
Comment 5 2015-06-01 04:05:58 PDT
ping?
Csaba Osztrogonác
Comment 6 2015-06-02 01:15:23 PDT
ping?
Csaba Osztrogonác
Comment 7 2015-06-08 04:25:11 PDT
ping?
Csaba Osztrogonác
Comment 8 2015-06-12 03:26:47 PDT
Timothy, Dean, you owned r145332 which added this warning, so please take a look at the proposed fix. Thanks.
Csaba Osztrogonác
Comment 9 2015-06-18 01:21:01 PDT
ping?
Csaba Osztrogonác
Comment 10 2015-06-19 01:22:55 PDT
Comment on attachment 253518 [details] Patch Clearing flags on attachment: 253518 Committed r185742: <http://trac.webkit.org/changeset/185742>
Csaba Osztrogonác
Comment 11 2015-06-19 01:23:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.