[WK2] Fix unused-private-field warning in WebProcess/Plugins/PluginView.<h|cpp> https://bugs.webkit.org/show_bug.cgi?id=145252

Reviewed by Tim Horton.

Source/WebKit2:

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::PluginView): Added the necessary ifdef guard.
* WebProcess/Plugins/PluginView.h: Added the necessary ifdef guard.
* WebProcess/WebPage/WebPage.h: Moved the definition of ENABLE_PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC to WTF.

Source/WTF:

* wtf/FeatureDefines.h: Moved the definition of ENABLE_PRIMARY_SNAPSHOTTED_PLUGIN_HEURISTIC
here from Source/WebKit2/WebProcess/WebPage/WebPage.h

Canonical link: https://commits.webkit.org/164185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185742 268f45cc-cd09-0410-ab3c-d52691b4dbfc